[package]
name = "lox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = { version = "=0.4.1", features = ["concolor", "auto-color"] }
clap = { version = "4.5.7", features = ["derive"] }
concolor = { version = "0.1.1", features = ["windows", "auto"] }
log = "0.4.21"
